<resources>
    <string name="app_name">AndroidPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="font_family_casual">casual</string>
    <string name="font_family_monospace">monospace</string>
    <string name="font_family_serif_monospace">serif-monospace</string>
    <string name="font_family_cursive">cursive</string>
    <string name="help">Help</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="user">user</string>
    <string name="bank_name">Bank Name</string>
    <string name="yes">Yes</string>


    <array name="payment_method">
        <item>Card</item>
        <item>GPay</item>
        <item>Paytm</item>
        <item>Bitcoin</item>
    </array>

</resources>