<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="args"
            type="com.example.androidpay.fragments.paymentsend.SendFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.paymentsend.SendFragment"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/paymentSendToolbarLayout"
            style="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:scrimAnimationDuration="300">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/colorWhite"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_baseline_navigate_before_24">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textFontWeight="400"
                        android:textSize="22sp"
                        app:fontFamily="@string/font_family_regular" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentSendToolbarLayout"
            android:padding="22dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/paymentDetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@string/font_family_medium"
                android:text="Payment details "
                android:textSize="24sp" />

            <TextView
                android:id="@+id/creditCardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/paymentDetailText"
                android:layout_marginTop="16dp"
                android:layout_margin="8dp"
                android:fontFamily="@string/font_family_casual"
                android:text="Enter your credit card details" />


            <EditText
                android:id="@+id/bankNameTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/creditCardText"
                android:layout_marginTop="12dp"
                style="@style/Widget.MaterialComponents.TextView"
                android:hint="Bank Name"
                android:background="@color/colorWhite"
                android:maxLength="18"
                android:singleLine="true"
                android:fontFamily="@string/font_family_thin"
                />

            <EditText
                android:id="@+id/accountNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/bankNameTextView"
                android:layout_marginTop="22dp"
                style="@style/Widget.MaterialComponents.TextView"
                android:hint="Card Number"
                android:drawableRight="@drawable/visa"
                android:layout_marginRight="22dp"
                android:background="@color/colorWhite"
                android:maxLength="19"
                android:singleLine="true"
                android:fontFamily="@string/font_family_thin"
                android:inputType="phone"
                />


            <LinearLayout
                android:id="@+id/layoutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/accountNumberTextView"
                android:weightSum="2"
                android:layout_marginTop="22dp">

                <EditText
                    android:id="@+id/expireDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:hint="Expiry year : mm/yy"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:inputType="date"
                    android:singleLine="true"
                    android:maxLength="5"
                    android:fontFamily="@string/font_family_thin"
                    />


                <EditText
                    android:layout_below="@id/accountNumberTextView"
                    android:layout_height="60dp"
                    android:layout_width="wrap_content"
                    android:hint="cvv"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:drawableEnd="@drawable/ic_baseline_credit_card_24"
                    android:maxLength="3"
                    android:fontFamily="@string/font_family_thin"
                    />


            </LinearLayout>

            <EditText
                android:id="@+id/paymentDetailsText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/layoutView"
                android:layout_marginTop="22dp"
                style="@style/Widget.MaterialComponents.TextView"
                android:hint="Payment Detail"
                android:background="@color/colorWhite"
                android:fontFamily="@string/font_family_thin"
                android:singleLine="true"
                android:maxLength="42"
                />

        </RelativeLayout>


        <Button
            android:id="@+id/navigateTransactionResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
            android:drawableTint="@color/colorWhite"
            android:fontFamily="@string/font_family_light"
            android:text="@{`Send \u20B9 ` + args.transactionAmount}"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.888"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>